<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FallBActivity">

    <EditText
        android:id="@+id/productIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:hint="@string/productName"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/mrpIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:hint="@string/mrpValue"
        android:minHeight="48dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/mfgIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:hint="@string/manDate"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/expIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:hint="@string/expDate"
        android:inputType="text"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/confirm_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/confirm"
        android:backgroundTint="@android:color/holo_green_dark"
        android:textColor="@android:color/white"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:constraint_referenced_ids ="productIn,mrpIn,mfgIn,expIn,confirm_button2"
        app:flow_horizontalAlign="start"
        app:flow_verticalGap="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>