<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.example.textrecognitionlive.main.MainFragment">


    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </androidx.camera.view.PreviewView>

    <SurfaceView
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/viewFinder"
        app:layout_constraintEnd_toEndOf="@id/viewFinder"
        app:layout_constraintStart_toStartOf="@id/viewFinder"
        app:layout_constraintTop_toTopOf="@id/viewFinder" />


    <!--<com.android.example.textrecognitionlive.DetectionAreaView
                android:id="@+id/detectionAreaView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent" />-->

    <Button
        android:id="@+id/start_button"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginEnd="240dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="150dp"
        android:elevation="2dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/confirm_button1"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="150dp"
        android:elevation="2dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/fallback_button"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="150dp"
        android:elevation="2dp"
        android:text="@string/fallback"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <!--<Button
        android:id="@+id/stop_button"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="480dp"
        android:layout_marginBottom="150dp"
        android:elevation="2dp"
        android:text="@string/stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>-->

    <TextView
        android:id="@+id/recogText"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@android:color/black"
        android:padding="16dp"
        android:scrollbars="vertical"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>





    <!--<com.android.example.textrecognitionlive.GraphicOverlay
        android:id ="@+id/overlayView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent" />-->

    <!--<Button
        android:id="@+id/image_capture_button"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="50dp"
        android:elevation="2dp"
        android:text="@string/take_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_centerline" />-->

<!--<Button
        android:id="@+id/video_capture_button"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="50dp"
        android:elevation="2dp"
        android:text="@string/start_capture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/vertical_centerline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_centerline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />-->

